# flutter_roadmap_foundation

./: .gitignore  README.md  analysis_options.yaml  pubspec.yaml  vercel.json
.github/workflows/: ci.yml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  native_math.c
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/app/: app.dart  router.dart
lib/core/animations/: animation_constants.dart
lib/core/constants/: app_colors.dart  app_text_styles.dart
lib/core/widgets/: loading_overlay.dart
lib/features/auth/data/providers/: auth_notifier.dart  router_notifier.dart
lib/features/auth/presentation/pages/: login_page.dart
lib/features/counter/data/repositories/: in_memory_counter_repository.dart
lib/features/counter/presentation/: counter_controller.dart  counter_page.dart
lib/features/market/domain/entities/: candle_data.dart  (+5 more)
lib/features/native/data/: device_channel.dart  native_math_ffi.dart
lib/features/shell/presentation/: app_shell.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
test/unit/market/: auth_notifier_test.dart  candle_aggregator_test.dart  price_history_notifier_test.dart  price_history_notifier_test.mocks.dart
test/widget/market/: candlestick_painter_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
(+37 files in other folders)
